# agentxp

./: .gitignore  AGENTXP_V01_CLEANUP_MASTER_PLAN.md  AGENTXP_V01_COMBINED_BUILD_PLAN.md  BUILD_STATUS.yaml  BUILD_STATUS_COMBINED.yaml  BUILD_STATUS_PRESENTATION.yaml  CLAUDE.md  DEMO.md  FINAL_STATUS.md  LICENSE  OVER_ENGINEERING_REVIEW.md  PRD_COVERAGE.md  PRESENTATION_LAYER_MASTER_PLAN.md  PRESENTATION_SPINE_MASTER_PLAN.md  README.md  REMEDIATION_PLAN.yaml  REVIEW_4_FINAL.md  REVIEW_FINDINGS.md  REVIEW_RUBRIC.md  SYSTEM_AUDIT.md  TEST_PLAN.md  WAVE1_REVIEW.md  WAVE2_REVIEW.md  pyproject.toml  requirements.txt
.claude/commands/: README.md  audit.md  connect-data.md  experiment.md  list.md  profile.md  resume.md  unlock.md
agents/: INDEX.md  analyst_narrator.md  analyzer.system.md  consistency_judge.system.md  critic.md  designer.md  experiment-analyzer.md  experiment-designer.md  experiment-interpreter.md  experiment-monitor.md  experiment-readout.md  interpreter.system.md  metric_drafter.system.md  monitor.system.md  profiler.system.md  readout.system.md  registry.yaml  semantic_modeler.system.md  sql_corrector.system.md  sql_query_writer.system.md  sql_specialist.md  understander.md
agents/designer/: drafter.system.md  editor.system.md  elicitor.system.md
agents/profiler/: preamble_bigquery.md  preamble_duckdb.md  preamble_snowflake.md
agentxp/: INDEX.md  __init__.py  __main__.py  _flags.py  finalize.py
agentxp/agents/: gen_registry.py
agentxp/amendments/: __init__.py  tracker.py
agentxp/audit/: chain.py  decisions.py  events.py  redactor.py  storage.py
agentxp/cli/: __init__.py  __main__.py  audit.py  audit_diff.py  audit_html.py  connect.py  connect_bigquery.py  connect_common.py  connect_databricks.py  connect_duckdb.py  (+12 more)
bundles/: profiler.out.yaml
docs/: QUICKSTART.md  USER_JOURNEYS.md  snowflake-setup.md
metrics/: _TEMPLATE.yaml  bounce_rate.yaml  checkout_completion_rate.yaml  d7_retention.yaml  revenue_per_session.yaml  session_revenue.yaml
openxp/: __init__.py  __main__.py
sample-data/: README.md  checkout_redesign.csv  clean_ab.csv  guardrail_violation.csv  mixed_results.csv  no_effect.csv  ship_demo.csv  srm_violation.csv  underpowered.csv
scripts/: vendor-sync.sh
semantic_models/: _TEMPLATE.yaml
templates/: experiment-index.html.j2  experiment-report.html.j2  experiment-report.md  social-card.html.j2  stats-cheat-sheet.md
tests/: conftest.py  test_ab_tests.py  test_amendments.py  test_bayesian.py  test_csv_loader.py  test_cuped.py  test_data_discovery.py  test_duckdb_loader.py  test_effect_size.py  test_errors_and_validators.py  test_metrics.py  test_missing_functions.py  test_monitoring.py  test_power.py  test_result_models.py  test_sample_data_verdicts.py  test_schema_lifecycle_sync.py  test_sequential.py  test_snowflake_loader.py  test_srm.py  test_storage.py  test_trace.py
walkthroughs/: bayesian.md  cuped.md  data-connectors.md  metric-definitions.md  monitoring.md  power-calculation.md  pre-registration.md  reading-results.md  sequential.md  state-machine.md  your-first-experiment.md
(+456 files in other folders)
