[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentxp"
version = "0.1.0"
description = "Open-source system for the design and analysis of controlled experiments, intended for use inside Claude Code. Deterministic Python functions handle the statistical work; agentic stages handle the judgment-dependent steps."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "AI Analyst Lab", email = "hello@aianalystlab.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "pyyaml>=6.0,<7.0",
    "pydantic>=2.5,<3.0",
    "jinja2>=3.1,<4.0",
    "sqlglot>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.0",
    "duckdb>=0.10",  # reference adapter — Tier-A suite + W3 always-on leg need it
]
snowflake = [
    "snowflake-connector-python>=3.0",
]
bigquery = [
    "google-cloud-bigquery>=3.0",
]
databricks = [
    "databricks-sql-connector>=3.0",
]
duckdb = [
    "duckdb>=0.10",
]
deep-profile = [
    "ydata-profiling>=4.6,<5.0",
    "pandas>=2.0",  # already in core deps but explicit here is safer
]

[project.scripts]
agentxp = "agentxp.cli.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: live-warehouse tests requiring real credentials (skipped by default)",
]

[tool.setuptools.packages.find]
include = ["agentxp*"]

[tool.setuptools.package-data]
"agentxp.agents.templates" = ["*.j2"]
